adding jquery-ui w/ pepper-grinder theme

--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -13,6 +13,7 @@
         <link href="/static/css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
         <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="screen" />
         <script type='text/javascript' src='/static/js/jquery-1.4.4.min.js'></script>
+        {% include "includes/jquery.ui.inc" %}
         {% dajaxice_js_import %}
         {% endblock %}
     </head>
