--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -24,14 +24,16 @@
 <h3>Your experiments</h3>
 <div id="post">
     {% for e in experiments %}
-    <div class='notice'>
-    {{e}} {{e.status_line}}<br/>
-    <ul class='horizontal' id='horizontal'>
-        <li><a href='{{e.monitor_url}}'><img src='/static/images/famfamfam/zoom.png' alt=''/> monitor</a></li>
-        <li><a class='confirm-experiment-action' style='background-image:none;' href='{{e.stop_url}}'><img src='/static/images/famfamfam/stop.png' alt=''/> stop</a></small></li>
-    </ul>
+    <div class='notice ui-corner-all'>
+        {{e}} {{e.status_line}}
+        <br/>
+        <ul class='horizontal' id='horizontal'>
+            <li><a href='{{e.monitor_url}}'><img src='/static/images/famfamfam/zoom.png' alt=''/> monitor</a></li>
+            <li><a class='confirm-experiment-action' style='background-image:none;' href='{{e.stop_url}}'><img src='/static/images/famfamfam/stop.png' alt=''/> stop</a></small></li>
+        </ul>
+    </div>
     {% empty %}
-    <div class='info infoIcon'>
+    <div class='info infoIcon ui-corner-all'>
         You are not currently running any experiments.
     </div>
     {% endfor %}
