--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -3,7 +3,7 @@ a.external {
     padding-right: 13px;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
     margin: 0;
     font-weight: normal;
     color: #549900;
@@ -14,6 +14,15 @@ h1, h2, h3 {
     margin-top:1em;
     margin-bottom:.7em;
 }
+
+h1 { font-size: 1.8em; }
+
+h2 { font-size: 1.4em; }
+
+h3 { font-size: 1.2em; }
+
+h4 { font-size: 1.0em; }
+
 
 input[type=text], input[type=password] {
     width: 12em;
@@ -108,21 +117,26 @@ legend {
     padding-left: 25px;
 }
 
+span.ui-icon {
+   float: left;
+   /* top right bottom left */
+   margin: 6px 5px 0px 5px;
+}
 
-#experiments li.inactive {
+#experiments span.inactive {
     background: url('/static/images/famfamfam/clock_stop.png') center left no-repeat;
 }
 
-#experiments li.active {
+#experiments span.active {
     background: url('/static/images/famfamfam/accept.png') center left no-repeat;
 }
 
-#experiments li.round_in_progress {
+#experiments span.round_in_progress {
     background: url('/static/images/famfamfam/arrow_refresh.png') center left no-repeat;
 }
 
 
-#experiments li.rightArrow {
+#experiments .rightArrow {
     margin: 0;
     background: url('/static/images/famfamfam/bullet_go.png') center left no-repeat;
     padding-left: 16px;
