--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -32,7 +32,8 @@
             <h3>Notifications</h3>
             <ul class="messages">
                 {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                <span class='ui-icon ui-icon-alert'></span>{{ message }}</li>
                 {% endfor %}
             </ul>
             {% endif %}
