--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -33,13 +33,13 @@ Forestry Experiment Round {{ experiment.current_round.round_number }}
 </div>
 {% else %}
 The facilitator will start the next round when every participant is ready.
-<div class='info'>
-    <a class='contactIcon' href>send a private message to the facilitator</a>
-</div>
+<span class='ui-state-highlight ui-corner-all'>
+    <small><a class='contactIcon' href="#">send a private message to the facilitator</a></small>
+</span>
 {% endif %}
 
 <h3>Instructions</h3>
-<div class='info'>
+<div class='info ui-corner-all'>
     Please wait until the next round begins.
     {% comment%}
     add ajax spinner and polling
