minor html validator fixes

--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -10,7 +10,7 @@
                 dialogShow: 'fadeIn',
                 dialogSpeed: 'fast',
                 buttons: {
-                    wrapper: '<button></button>',
+                    wrapper: "<button></button>",
                     separator: ' '
                 },
                 msg: '&nbsp; You are about to modify the experiment. Continue?'
