--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -18,7 +18,7 @@ VCWEB: Monitoring {{ experiment.status_line }}
             Round <span id='experiment-round'> {{ experiment.current_round.sequence_number }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b>
             <span id='horizontal'>
                 {% if experiment.is_round_in_progress %}
-                <a class='confirm-experiment-action' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' /> end round</a>
+                <a class='confirm-experiment-action' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' alt='' /> end round</a>
                 {% else %}
                 <a class='confirm-experiment-action' href='start-round'><img src='/static/images/famfamfam/control_play_blue.png' alt='' /> start round</a>
                 {% endif %}
@@ -28,8 +28,7 @@ VCWEB: Monitoring {{ experiment.status_line }}
         <div class='status'>
             Status: <span id='experiment-status'>{{ experiment.get_status_display }}</span> 
             {% if not experiment.is_active %}
-            <a class='confirm-experiment-action' href='activate'><img
-                src='/static/images/famfamfam/cog_go.png' alt=''> activate</a>
+            <a class='confirm-experiment-action' href='activate'><img src='/static/images/famfamfam/cog_go.png' alt='' /> activate</a>
             {% endif %}
         </div>
         <div>
