--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -28,6 +28,29 @@ input[type=text], input[type=password] {
     width: 12em;
 }
 
+input.error {
+   padding: 0;
+   margin: 0;
+   border: solid red;
+}
+
+label.error {
+    background: url('/static/images/unchecked.gif') no-repeat left center #FBE3E4;
+    line-height: normal;
+    font-size: .8em;
+    margin:0.3em;
+    padding:0.3em;
+    padding-left: 1.1em;
+    margin-left: 0.3em;
+}
+
+
+
+input.upToTwoDigits {
+   width: 2em;
+   text-align: right;
+}
+
 span.label {
     float: left;
     text-align: right;
