--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -16,26 +16,30 @@ VCWEB: Monitoring {{ experiment.status_line }}
         <legend>Round Status</legend>
         <div>
             Round <span id='experiment-round'> {{ experiment.current_round.sequence_number }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b>
-            <span id='horizontal'>
-                {% if experiment.is_round_in_progress %}
-                <a class='confirm-experiment-action' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' alt='' /> end round</a>
-                {% else %}
-                <a class='confirm-experiment-action' href='start-round'><img src='/static/images/famfamfam/control_play_blue.png' alt='' /> start round</a>
-                {% endif %}
-                <a style='background-image: none;' class='confirm-experiment-action' href='advance-to-next-round'><img src='/static/images/famfamfam/control_fastforward_blue.png' alt=''/> next round</a>
-            </span>
         </div>
         <div class='status'>
             Status: <span id='experiment-status'>{{ experiment.get_status_display }}</span> 
-            {% if not experiment.is_active %}
-            <a class='confirm-experiment-action' href='activate'><img src='/static/images/famfamfam/cog_go.png' alt='' /> activate</a>
-            {% endif %}
         </div>
         <div>
             Type: <span id='round-type'>{{ experiment.current_round.get_round_type_display }}</span>
         </div>
         <div>
             Time remaining: <span id='time-left'> {{ experiment.time_remaining }} </span>
+        </div>
+    </fieldset>
+    <fieldset class='small ui-corner-all'>
+        <legend>Actions</legend>
+        <div>
+            {% if experiment.is_active %}
+            {% if experiment.is_round_in_progress %}
+            <a class='confirm-experiment-action' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' alt='' /> end round</a>
+            {% else %}
+            <a class='confirm-experiment-action' href='start-round'><img src='/static/images/famfamfam/control_play_blue.png' alt='' /> start round</a>
+            {% endif %}
+            <a style='background-image: none;' class='confirm-experiment-action' href='advance-to-next-round'><img src='/static/images/famfamfam/control_fastforward_blue.png' alt=''/> advance to next round</a>
+            {% else %}
+            <a class='confirm-experiment-action' href='activate'><img src='/static/images/famfamfam/cog_go.png' alt='' /> activate</a>
+            {% endif %}
         </div>
     </fieldset>
 </div>
@@ -54,7 +58,7 @@ VCWEB: Monitoring {{ experiment.status_line }}
             <tr>
                 <td>{{ group_data_value.group }}</td>
                 <td>{{ group_data_value.parameter.label}}</td>
-                <td>{{ group_data_value.parameter.value}}</td>
+                <td>{{ group_data_value.value}}</td>
                 <td>{{ group_data_value.parameter.type}}</td>
             </tr>
             {% endfor %}
@@ -78,7 +82,7 @@ VCWEB: Monitoring {{ experiment.status_line }}
             <tr>
                 <td>{{ participant_data_value.participant }}</td>
                 <td>{{ participant_data_value.parameter.label }}</td>
-                <td>{{ participant_data_value.parameter.value }}</td>
+                <td>{{ participant_data_value.value }}</td>
                 <td>{{ participant_data_value.parameter.type }}</td>
             </tr>
             {% endfor %}
