renaming includes from .inc to .html, adding static dajaxice JS
--HG--
rename : vcweb/core/templates/includes/experimenter-nav-menu.inc => vcweb/core/templates/includes/experimenter-nav-menu.html
rename : vcweb/core/templates/includes/experimenter.events.inc => vcweb/core/templates/includes/experimenter.events.html
rename : vcweb/core/templates/includes/form-as-div.inc => vcweb/core/templates/includes/form-as-div.html
rename : vcweb/core/templates/includes/jquery.ui.inc => vcweb/core/templates/includes/jquery.ui.html
rename : vcweb/core/templates/includes/nav-menu.inc => vcweb/core/templates/includes/nav-menu.html
rename : vcweb/core/templates/includes/participant-nav-menu.inc => vcweb/core/templates/includes/participant-nav-menu.html
rename : vcweb/core/templates/includes/participant.events.inc => vcweb/core/templates/includes/participant.events.html
rename : vcweb/core/templates/includes/socket.io.inc => vcweb/core/templates/includes/socket.io.html

--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -24,5 +24,5 @@
 {% endblock %} 
 
 {% block header %}
-    {% include "includes/experimenter-nav-menu.inc" %}
+    {% include "includes/experimenter-nav-menu.html" %}
 {% endblock %}
