--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Virtual Commons Web Experimenter Interface{% endblock %}
 
-{% block header %} {% include "includes/experimenter-nav-menu.inc" %} {% endblock header %}
+{% block header %} {% include "includes/experimenter-nav-menu.html" %} {% endblock header %}
 
 {% block page %}
 {{ block.super }}
