--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -22,7 +22,7 @@ $(function() {
     Don&#39;t have an account or a first-time user?  Please <a href='{% url core:register %}'>register first</a>.
     </p>
 
-    {% include "includes/form-as-div.inc" %}
+    {% include "includes/form-as-div.html" %}
     <div class='submit'>
         <input type='submit' value='Login' />
     </div>
