--- a/vcweb/core/templates/registration/password_reset_form.html
+++ b/vcweb/core/templates/registration/password_reset_form.html
@@ -19,7 +19,7 @@ $(document).ready(function() {
 <fieldset>
 <legend>Reset your password</legend>
 
-{% include "includes/form-as-div.inc" %}
+{% include "includes/form-as-div.html" %}
 <div class='submit'>
 <input type='submit' value='Reset' />
 </div>
