--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block header %}
-    {% include "includes/participant-nav-menu.inc" %}
+    {% include "includes/participant-nav-menu.html" %}
 {% endblock %}
 
 
