--- a/vcweb/core/templates/monitor.html
+++ b/vcweb/core/templates/monitor.html
@@ -1,6 +1,6 @@
 {% extends "base-experimenter.html" %}
 
-{% block title %} 
+{% block title %}
 VCWEB: Monitoring {{ experiment.status_line }}
 {% endblock %}
 
@@ -12,36 +12,8 @@ VCWEB: Monitoring {{ experiment.status_line }}
     FIXME: Improve this so that we can just inject a new round_configuration
     JSON object in and everything auto-updates.
     {% endcomment %}
-    <fieldset class='small ui-corner-all'>
-        <legend>Round Status</legend>
-        <div>
-            Round <span id='experiment-round'> {{ experiment.current_round.sequence_number }}</span> of <b>{{ experiment.experiment_configuration.final_sequence_number }}</b>
-        </div>
-        <div class='status'>
-            Status: <span id='experiment-status'>{{ experiment.get_status_display }}</span> 
-        </div>
-        <div>
-            Type: <span id='round-type'>{{ experiment.current_round.get_round_type_display }}</span>
-        </div>
-        <div>
-            Time remaining: <span id='time-left'> {{ experiment.time_remaining }} </span>
-        </div>
-    </fieldset>
-    <fieldset class='small ui-corner-all'>
-        <legend>Actions</legend>
-        <div>
-            {% if experiment.is_active %}
-            {% if experiment.is_round_in_progress %}
-            <a class='confirm-experiment-action' href='end-round'><img src='/static/images/famfamfam/control_stop_blue.png' alt='' /> end round</a>
-            {% else %}
-            <a class='confirm-experiment-action' href='start-round'><img src='/static/images/famfamfam/control_play_blue.png' alt='' /> start round</a>
-            {% endif %}
-            <a style='background-image: none;' class='confirm-experiment-action' href='advance-to-next-round'><img src='/static/images/famfamfam/control_fastforward_blue.png' alt=''/> advance to next round</a>
-            {% else %}
-            <a class='confirm-experiment-action' href='activate'><img src='/static/images/famfamfam/cog_go.png' alt='' /> activate</a>
-            {% endif %}
-        </div>
-    </fieldset>
+    {% include "includes/experiment-status.html" %}
+    {% include "includes/experiment-actions.html" %}
 </div>
 
 {% for round_data in experiment.round_data.all %}
